# mcp-gitlab

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .snyk  ATLASSIAN_REVIEW_IMPLEMENTATION.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITLAB_USABILITY_IMPROVEMENTS.md  IMPROVEMENTS.md  Makefile  README.md  SECURITY.md  USABILITY_IMPROVEMENTS.md  additional_parameter_improvements.py  audit_handlers.py  codecov.yml  conftest.py  improved_parameters.py  pyproject.toml  pytest.ini  pytest_asyncio_plugin.py  run_tests.sh  sonar-project.properties  test_commits.py  test_gitlab_connection.py  test_simple.py
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.claude-flow/metrics/: performance.json  task-metrics.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  tool_request.md
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  release.yml  security-scan.yml
.swarm/: memory.db
docs/: conf.py  index.rst  requirements.txt
dotenv/: __init__.py
examples/: handler_example.py
gitlab_stubs/: __init__.py  exceptions.py
mcp/: types.py
mcp/server/: __init__.py  models.py  stdio.py
mcp_gitlab/: __init__.py
pydantic/: __init__.py
src/mcp_gitlab/: __init__.py  __main__.py  constants.py  decorators.py  git_detector.py  gitlab_client.py  rate_limiter.py  security.py  server.py  tool_definitions.py  tool_descriptions.py  tool_handlers.py  tool_usability_improvements.py  utils.py  validation.py  validators.py  version.py
tests/: __init__.py  conftest.py  test_git_detector.py  test_gitlab_client.py  test_integration.py  test_server.py  test_stubs.py  test_tool_handlers.py  test_tool_registration.py  test_utils.py
